EXTRA_DIST= all.lst karg.def \
  getapdu.inc              loadimage.inc         mcpropertyread.inc   mprogmodeoff.inc              opentconnection.inc \
  getapdusrc.inc           mcauthorize.inc       mcpropertyscan.inc   mprogmodeon.inc               opentgroup.inc \
  getbusmonitorpacket.inc  mcconnect.inc         mcpropertywrite.inc  mprogmodestatus.inc           opentindividual.inc \
  getgroupsrc.inc          mcgetmaskversion.inc  mcreadadc.inc        mprogmodetoggle.inc           openttpdu.inc \
  groupcacheclear.inc      mcgetpeitype.inc      mcread.inc           mreadindividualaddresses.inc  openvbusmonitor.inc \
  groupcachedisable.inc    mcprogmodeoff.inc     mcrestart.inc        mwriteindividualaddress.inc   openvbusmonitortext.inc \
  groupcacheenable.inc     mcprogmodeon.inc      mcsetkey.inc         openbusmonitor.inc            reset.inc \
  groupcacheread.inc       mcprogmodestatus.inc  mcwrite.inc          openbusmonitortext.inc        sendapdu.inc \
  groupcachereadsync.inc   mcprogmodetoggle.inc  mcwriteplain.inc     opengroupsocket.inc           sendgroup.inc \
  groupcacheremove.inc     mcpropertydesc.inc    mgetmaskversion.inc  opentbroadcast.inc            sendtpdu.inc \
  gettpdu.inc       groupcachelastupdates.inc    mcindividual.inc

